EKS/eip.tf
# #리전별로 EIP 한개씩 

# resource "aws_eip" "nat_gy_eip_a" {
#     vpc = true
# }

# resource "aws_eip" "nat_gy_eip_c" {
#     vpc = true
# }
