EKS/route_table.tf


resource "aws_route_table" "eks_route_public_a" {
    vpc_id = aws_vpc.eks_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.eks_igw.id
    }

    tags = {
        Name = "route_public_a"
    }
}

resource "aws_route_table_association" "route_a_public" {
    subnet_id = aws_subnet.eks_public_a.id
    route_table_id = aws_route_table.eks_route_public_a.id
}


resource "aws_route_table" "eks_route_public_c" {
    vpc_id = aws_vpc.eks_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.eks_igw.id
    }


    tags = {
        Name = "route_public_c"
    }
}

resource "aws_route_table_association" "route_c_public" {
    subnet_id = aws_subnet.eks_public_c.id
    route_table_id = aws_route_table.eks_route_public_c.id
}





# ##private_EKS1

# resource "aws_route_table" "eks_private_a" {
#     vpc_id = aws_vpc.eks_vpc.id


#     route {
#         cidr_block = "0.0.0.0/0"
#         nat_gateway_id = aws_nat_gateway.eks_nat_a.id
#     }

#     tags = {
#         Name = "eks_private_a"
#     }
# }

# resource "aws_route_table_association" "eks_private_a" {
#     subnet_id = aws_subnet.eks_private_a_1.id
#     route_table_id = aws_route_table.eks_private_a.id
# }

# ##private_EKS2
# resource "aws_route_table" "eks_private_c" {
#     vpc_id = aws_vpc.eks_vpc.id

#     route {
#         cidr_block = "0.0.0.0/0"
#          nat_gateway_id = aws_nat_gateway.eks_nat_c.id
#     }

#     tags = {
#         Name = "eks_private_c"
#     }
# }

# resource "aws_route_table_association" "eks_private_c" {
#     subnet_id = aws_subnet.eks_private_c_1.id
#     route_table_id = aws_route_table.eks_private_c.id
# }
